[gd_scene load_steps=4 format=3 uid="uid://b6j5p6mwch7k7"]

[ext_resource type="Script" path="res://Player.gd" id="1"]

[sub_resource type="SphereShape3D" id="1"]

[sub_resource type="SphereMesh" id="2"]

[node name="Player" type="Node3D"]

[node name="RigidBody3D" type="RigidBody3D" parent="."]
mass = 1.63265
gravity_scale = 9.8
can_sleep = false
continuous_cd = true
script = ExtResource("1")

[node name="CollisionShape" type="CollisionShape3D" parent="RigidBody3D"]
transform = Transform3D(0.305, 0, 0, 0, 0.305, 0, 0, 0, 0.305, 0, 0, 0)
shape = SubResource("1")

[node name="MeshInstance" type="MeshInstance3D" parent="RigidBody3D"]
transform = Transform3D(0.305, 0, 0, 0, 0.305, 0, 0, 0, 0.305, 0, 0, 0)
mesh = SubResource("2")

[node name="RayCastDown" type="RayCast3D" parent="RigidBody3D"]

[node name="RayCastUp" type="RayCast3D" parent="RigidBody3D"]

[node name="RayCastFront" type="RayCast3D" parent="RigidBody3D"]

[node name="RayCastBack" type="RayCast3D" parent="RigidBody3D"]

[node name="RayCastLeft" type="RayCast3D" parent="RigidBody3D"]

[node name="RayCastRight" type="RayCast3D" parent="RigidBody3D"]
